# better-image-viewer

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css  viewer.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
