[package]
name = "better-image-viewer"
version = "1.0.0"
description = "A Better Image Viewer"
authors = ["pyrus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "image_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
natord = "1.0.9"
image = { version = "0.25.9", features = ["ico", "tiff", "png", "jpeg", "webp", "tiff", "bmp"] }
ico = "0.5.0"
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.36.0"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
trash = "5.2.5"
wallpaper = "3.2.0"
rexif = "0.7.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = { version = "0.3.9", features = [
    "winver",
    "shellapi", 
    "wingdi",
    "windef", 
    "winuser",
    "libloaderapi",
    "errhandlingapi"
] }
urlencoding = "2.1.3"
windows-sys = { version = "0.52", features = [
  "Win32_UI_Shell"
] }
